[gd_scene load_steps=16 format=2]

[ext_resource path="res://Art/Boss/Giant/GiantRight.png" type="Texture" id=1]
[ext_resource path="res://Art/Boss/Giant/GiantLeft.png" type="Texture" id=2]
[ext_resource path="res://Entity/Boss/Giant/Giant.gd" type="Script" id=3]
[ext_resource path="res://Art/Boss/Giant/GiantShield.png" type="Texture" id=4]
[ext_resource path="res://Art/Boss/Giant/GiantSurpriseRight.png" type="Texture" id=5]
[ext_resource path="res://Art/Boss/Giant/GiantHurtRight.png" type="Texture" id=6]
[ext_resource path="res://Art/Boss/Giant/GiantHurtLeft.png" type="Texture" id=7]
[ext_resource path="res://Art/Boss/Giant/GiantSurpriseLeft.png" type="Texture" id=8]
[ext_resource path="res://Art/Boss/Giant/GiantExclamation.png" type="Texture" id=9]


[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "hurt_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "hurt_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "surprise_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "surprise_left",
"speed": 5.0
} ]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.15894, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.84106, 1, 1, 1, 0 )

[sub_resource type="CircleShape2D" id=3]
radius = 48.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 48, 24 )

[sub_resource type="Animation" id=5]
resource_name = "death"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -32 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 2.3
tracks/0/type = "method"
tracks/0/path = NodePath("AnimatedSprite")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [ "left", false ],
"method": "play"
}, {
"args": [ "surprise_left", false ],
"method": "play"
}, {
"args": [ "left", false ],
"method": "play"
} ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ true ],
"method": "set_shield_active"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ExclamationSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ExclamationSprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"times": PoolRealArray( 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0.5, 0.5 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimatedSprite:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.5, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -10 ), Vector2( 0, 0 ) ]
}

[node name="Giant" type="KinematicBody2D" groups=[
"boss",
"player_collider",
]]
collision_layer = 256
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "hurt_right"

[node name="ShieldParticles" type="CPUParticles2D" parent="."]
position = Vector2( 0, -42 )
amount = 5
lifetime = 0.4
texture = ExtResource( 4 )
direction = Vector2( 0, -1 )
spread = 20.0
gravity = Vector2( 0, 0 )
initial_velocity = 20.0
color_ramp = SubResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="ShieldTimer" type="Timer" parent="."]
one_shot = true

[node name="CollisionShapeCircle" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="CollisionShapeSquare" type="CollisionShape2D" parent="."]
position = Vector2( 0, 24 )
shape = SubResource( 4 )

[node name="LeftWallRayCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -49, 0 )

[node name="RightWallRayCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 49, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/death = SubResource( 5 )
anims/wake = SubResource( 6 )

[node name="ExclamationSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 32, -24 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )
offset = Vector2( 0, -16 )

[node name="IgnorePlayerTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="HurtTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="ShieldTimer" to="." method="_on_ShieldTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="IgnorePlayerTimer" to="." method="_on_IgnorePlayerTimer_timeout"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_HurtTimer_timeout"]
